@@ -1,0 +1,47 @@
+Common metadata
+===============
+
+The common metadata is used for many content types. Test a few things on the
+test type[#functional]_:
+
+>>> import zeit.cms.testcontenttype.testcontenttype
+>>> content = zeit.cms.testcontenttype.testcontenttype.TestContentType()
+
+Set "comments allowed" from common metadata:
+
+>>> content.commentsAllowed = True
+
+The initial value for the copyright is None:
+
+>>> content.copyrights is None
+True
+
+The interface default is:
+
+>>> zeit.cms.content.interfaces.ICommonMetadata['copyrights'].default
+u'ZEIT ONLINE'
+
+Set a copyright:
+
+>>> content.copyrights = u'ich'
+
+Verify the data:
+
+>>> import zeit.connector.interfaces
+>>> properties = zeit.connector.interfaces.IWebDAVProperties(content)
+>>> import pprint
+>>> pprint.pprint(dict(properties))
+{('comments', u'http://namespaces.zeit.de/CMS/document'): 'yes',
+ ('copyrights', u'http://namespaces.zeit.de/CMS/document'): u'ich',
+ ('date-last-modified', u'http://namespaces.zeit.de/CMS/document'): '...'}
+
+
+Clean up:
+
+>>> zope.app.component.hooks.setSite(old_site)
+
+.. [#functional]
+
+    >>> import zope.app.component.hooks
+    >>> old_site = zope.app.component.hooks.getSite()
+    >>> zope.app.component.hooks.setSite(getRootFolder())
