@@ -91,6 +91,12 @@ Set metadata:
   <copyright py:pytype="str" link="http://xyz.de">Agentur XY</copyright>
 </image>
 
+The interface default for the copyright is:
+
+>>> zeit.content.image.interfaces.IImageMetadata['copyrights'].default
+((u'ZEIT ONLINE', 'http://www.zeit.de/'),)
+
+
 Make sure we don't die when there is an invalid XML snippet stored:
 
 >>> import zeit.connector.interfaces
