@@ -23,6 +23,7 @@ zeit.cms changes
   ``{http://namespaces.zeit.de/CMS/link}href``), bug #4407.
 - "Kommentare erlaubt" jetzt bei den Standardmetadaten (bug #4385).
 - Bei der Center-Page ist Ausgabe und Jahr kein Pflichtfeld mehr (bug #4408).
+- Copyright-Default jetzt "ZEIT ONLINE" (bug #4409).
 
 1.0b7 (2008-07-14)
 ------------------
